[project]
name = "nepse-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "flask>=3.1.0",
    "httpx[http2]>=0.28.1",
    "pywasm>=2.0.1",
    "scalar-fastapi>=1.0.3",
    "tqdm>=4.67.1",
    "uvicorn>=0.34.2",
]
